--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "proxyquire": "~1.0.1",
     "mocha": "~1.21.5",
-    "request": "~2.40.0"
+    "request": "~2.40.0",
+    "rsvp": "~3.0.14",
+    "URIjs": "~1.14.1",
+    "should": "~3.3.2"
   },
   "devDependencies": {},
   "scripts": {},
